--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
+    "path": "^0.12.7",
     "validator": "^13.9.0",
     "winston": "^3.9.0"
   }
